Fixed logo header top

--- a/index.html
+++ b/index.html
@@ -24,15 +24,10 @@
         <!-- Header Top -->
         <div class="header-top flex">
             <div class="header-left flex">
-                <!-- Logo Header -->
-                <nav class="header-logo">
-                    <img src="img/logo-small.png" alt="Logo Dropbox">
-                </nav>
-                <!-- /Logo Header -->
-
                 <!-- Link Header -->
                 <nav class="header-link">
                     <ul>
+                        <li><img src="img/logo-small.png" alt="Logo Dropbox"></li>
                         <li><a href="">Perche Dropbox</a></li>
                         <li><a href="">Funzioni</a></li>
                         <li><a href="">Piani e Prezzi</a></li>
@@ -156,25 +151,25 @@
                     <div class="col">
                         <div class="top-col">
                             <div class="type-subscription">
-                                <i class="fa-solid fa-user"></i>
-                                <span>Singolo</span>
+                                <i class="fa-solid fa-users"></i>
+                                <span>Team</span>
                             </div>
                             <div class="big-container">
-                                <h3>Professional</h3>
-                                <h4>$ 12.00</h4>
-                                <span class="month">/mese</span>
+                                <h3>Advanced</h3>
+                                <h4>$ 18.00</h4>
+                                <span class="month">utente/mese</span>
                                 <ul class="plan-list">
                                     <li>
-                                        <i class="fa-solid fa-user"></i>
-                                        <span>1 utente</span>
+                                        <i class="fa-solid fa-users"></i>
+                                        <span>3 o più utenti</span>
                                     </li>
                                     <li>
                                         <i class="fa-solid fa-folder"></i>
-                                        <span>5 TB di spazio di archiviazione sicuro</span>
+                                        <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
                                     </li>
                                     <li>
                                         <i class="fa-sharp fa-solid fa-share-nodes"></i>
-                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                        <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                     </li>
                                 </ul>
                                 <span class="btn">Prova gratis per 30 giorni</span>
@@ -187,10 +182,19 @@
                                 <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                        <span>Nessun limite di spazio per i file</span>
                                     </li>
                                     <li><i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                        <span>Cartelle offline su dispositivi mobili</span>
+                                    </li>
+                                    <li><i class="fa-solid fa-check"></i> 
+                                        <span>Risparmio del 50% rispetto alle iscrizioni singole</span>
+                                    </li>
+                                    <li><i class="fa-solid fa-check"></i> 
+                                        <span>Possibilità di inserire nuovi membri del team</span>
+                                    </li>
+                                    <li><i class="fa-solid fa-check"></i> 
+                                        <span>Gestione dei permessi in base ai ruoli</span>
                                     </li>
                                 </ul>
                             </div>
@@ -202,28 +206,28 @@
                     <div class="col">
                         <div class="top-col">
                             <div class="type-subscription">
-                                <i class="fa-solid fa-user"></i>
-                                <span>Singolo</span>
+                                <i class="fa-solid fa-building"></i>
+                                <span>Azienda</span>
                             </div>
                             <div class="big-container">
-                                <h3>Professional</h3>
-                                <h4>$ 12.00</h4>
-                                <span class="month">/mese</span>
+                                <h3>Enterprise</h3>
+                                <h4>Contattaci</h4>
+                                <span class="month">-</span>
                                 <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-user"></i>
-                                        <span>1 utente</span>
+                                        <span>10 o più utenti</span>
                                     </li>
                                     <li>
                                         <i class="fa-solid fa-folder"></i>
-                                        <span>5 TB di spazio di archiviazione sicuro</span>
+                                        <span>Soluzioni personalizzabili per la tua azienda</span>
                                     </li>
                                     <li>
                                         <i class="fa-sharp fa-solid fa-share-nodes"></i>
-                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                        <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="btn">Contattaci</span>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -233,10 +237,15 @@
                                 <ul class="plan-list">
                                     <li>
                                         <i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                        <span>Cartelle offline su dispositivi mobili</span>
                                     </li>
-                                    <li><i class="fa-solid fa-check"></i> 
-                                        <span>Invia file fino a 100GB con Dropbox Transfert</span>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i> 
+                                        <span>Servizio assistenza 24/h</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i> 
+                                        <span>Possibilità di personalizzazione totale</span>
                                     </li>
                                 </ul>
                             </div>
@@ -249,8 +258,8 @@
                 <!-- Section Footer -->
                 <div class="section-footer">
                     <div class="type-subscription">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Singolo</span>
+                        <i class="fa-solid fa-building"></i>
+                        <span>Team</span>
                     </div>
                     <div class="content flex">
                         <div class="text">
