--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- Link Header -->
                 <nav class="header-link">
                     <ul>
-                        <li><img src="img/logo-small.png" alt="Logo Dropbox"></li>
+                        <li><a href=""><img src="img/logo-small.png" alt="Logo Dropbox"></a></li>
                         <li><a href="">Perche Dropbox</a></li>
                         <li><a href="">Funzioni</a></li>
                         <li><a href="">Piani e Prezzi</a></li>
@@ -89,11 +89,11 @@
                 <div class="section-top">
                     <h2>Trova il piano business che fa per te</h2>
                     <div class="radio-btn">
-                        <input type="radio" name="abbonamento-mensile" id="subscription-month">
+                        <input type="radio" name="abbonamento" id="subscription-month">
                         <label for="subscription-month">Fatturazione mensile</label>
                     </div>
                     <div class="radio-btn">
-                        <input type="radio" name="abbonamento-annuale" id="subscription-year">
+                        <input type="radio" name="abbonamento" id="subscription-year">
                         <label for="subscription-year">Fatturazione annuale</label>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                                         <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <a href="" class="btn">Prova gratis per 30 giorni</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                         <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <a href="" class="btn">Prova gratis per 30 giorni</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                                         <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
                                     </li>
                                 </ul>
-                                <span class="btn">Contattaci</span>
+                                <a href="" class="btn">Contattaci</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                             <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                         </div>
                         <div class="button">
-                            <span class="btn">Contatta l'ufficio vendite</span>
+                            <a href="" class="btn">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
                 </div>
@@ -286,7 +286,7 @@
                 <div class="text">
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                    <span class="btn white">Trova un partner</span>
+                    <a href="" class="btn white">Trova un partner</a>
                 </div>
             </div>
         </section>
@@ -420,7 +420,7 @@
                             <h2>Porta Dropbox Business nella tua azienda.</h2>
                         </div>
                         <div class="button">
-                            <span class="btn white">Inizia la tua prova gratuita</span>
+                            <a href="" class="btn white">Inizia la tua prova gratuita</a>
                         </div>
                     </div>
                 </div>
