Added hover on button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="">Supporto</a></li>
                         <li><a href="">Contatta l'ufficio vendite</a></li>
                         <li><a href="">Accedi</a></li>
-                        <li><a class="btn" href="">Invia</a></li>
+                        <li><a class="btn blue" href="">Invia</a></li>
                     </ul>
                 </nav>
                 <!-- /Link Header -->
@@ -64,7 +64,7 @@
                 <div class="jumbo-bottom flex">
                     <div class="jumbo-text">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
-                        <a href="" class="btn">Inizia la tua prova gratuita</a>
+                        <a href="" class="btn blue">Inizia la tua prova gratuita</a>
                         <span>Annulla in qualsiasi momento</span>
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
@@ -126,7 +126,7 @@
                                         <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                                     </li>
                                 </ul>
-                                <a href="" class="btn">Prova gratis per 30 giorni</a>
+                                <a href="" class="btn blue">Prova gratis per 30 giorni</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                         <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                     </li>
                                 </ul>
-                                <a href="" class="btn">Prova gratis per 30 giorni</a>
+                                <a href="" class="btn blue">Prova gratis per 30 giorni</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                                         <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
                                     </li>
                                 </ul>
-                                <a href="" class="btn">Contattaci</a>
+                                <a href="" class="btn blue">Contattaci</a>
                                 <span class="buy-link">oppure <a href="">acquista ora</a></span>
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                             <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                         </div>
                         <div class="button">
-                            <a href="" class="btn">Contatta l'ufficio vendite</a>
+                            <a href="" class="btn blue">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
                 </div>
