--- a/index.html
+++ b/index.html
@@ -477,51 +477,51 @@
                 <div class="col">
                     <h3>Dropbox</h3>
                     <ul>
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3>Prodotti</h3>
                     <ul>
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3>Azienda</h3>
                     <ul>
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3>Supporto</h3>
                     <ul>
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3>Community</h3>
                     <ul>
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
                     </ul>
                 </div>
             </div>
@@ -530,9 +530,11 @@
             <!-- Footer Bottom -->
             <div class="footer-bottom">
                 <span id="icon-language">
-                    <i class="fa-solid fa-earth-americas"></i>
-                    italiano 
-                    <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                    <a href="">
+                        <i class="fa-solid fa-earth-americas"></i>
+                        italiano 
+                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                    </a>
                 </span>
             </div>
             <!-- /Footer Bottom -->
