Added hover on section question

--- a/index.html
+++ b/index.html
@@ -437,29 +437,31 @@
                 <div class="section-main">
                     <div class="row-question flex">
                         <div class="text"> 
-                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                                <span class="question">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span> 
+                                <span class="answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos aut velit temporibus ullam, expedita dolor similique et, dolorum laboriosam maiores nobis optio! Cum ab, doloremque numquam fugit alias inventore.</span>
                         </div>
                         <div class="icon">
                             <i class="fa-sharp fa-solid fa-chevron-down check"></i>
                         </div>
-                        <div class="answer" id="check">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos aut velit temporibus ullam, expedita dolor similique et, dolorum laboriosam maiores nobis optio! Cum ab, doloremque numquam fugit alias inventore.</div> 
                     </div>
 
                     <div class="row-question flex">
                         <div class="text"> 
-                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                                <span class="question">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span> 
+                                <span class="answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos aut velit temporibus ullam, expedita dolor similique et, dolorum laboriosam maiores nobis optio! Cum ab, doloremque numquam fugit alias inventore.</span>
                         </div>
                         <div class="icon">
-                            <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                            <i class="fa-sharp fa-solid fa-chevron-down check"></i>
                         </div>
                     </div>
 
                     <div class="row-question flex">
                         <div class="text"> 
-                            <span>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span>
+                                <span class="question">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advandec?</span> 
+                                <span class="answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos aut velit temporibus ullam, expedita dolor similique et, dolorum laboriosam maiores nobis optio! Cum ab, doloremque numquam fugit alias inventore.</span>
                         </div>
                         <div class="icon">
-                            <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                            <i class="fa-sharp fa-solid fa-chevron-down check"></i>
                         </div>
                     </div>
                 </div>
