--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
                 <!-- Section Top -->
                 <div class="section-top">
                     <h2>Trova il piano business che fa per te</h2>
-                    <div class="radio-btn">
-                        <input type="radio" name="abbonamento" id="subscription-month">
-                        <label for="subscription-month">Fatturazione mensile</label>
-                    </div>
-                    <div class="radio-btn">
-                        <input type="radio" name="abbonamento" id="subscription-year">
-                        <label for="subscription-year">Fatturazione annuale</label>
-                    </div>
+                    <label class="radiobtn-container">
+                        <input type="radio" checked="checked" name="radio">
+                        <span class="checkmark"></span>
+                        <span id="name-radio">Fatturazione Mensile</span>
+                    </label>
+                    <label class="radiobtn-container">
+                        <input type="radio" checked="checked" name="radio">
+                        <span class="checkmark"></span>
+                        <span id="name-radio">Fatturazione Annuale</span>
+                    </label>
                 </div>
                 <!-- /Section Top -->
 
