Added submenu to header

--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
                 <nav class="header-link">
                     <ul>
                         <li><a href=""><img src="img/logo-small.png" alt="Logo Dropbox"></a></li>
-                        <li><a href="">Perche Dropbox</a></li>
-                        <li><a href="">Funzioni</a></li>
-                        <li><a href="">Piani e Prezzi</a></li>
+                        <li>
+                            <a href="">Perche Dropbox</a>
+                            <div class="sotto-menu">Lorem ipsum e laudantium, molestiae, aperiam quidem aut corporis cupiditate eum voluptatibus incidunt voluptate odit quas debitis ab rem assumenda architecto sint quisquam?</div>
+                        </li>
+                        <li>
+                            <a href="">Funzioni</a>
+                            <div class="sotto-menu">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eum nemo cumque nobis, veritatis, quibusdam repudiandae pariatur fugit unde autem repellen</div>
+                        </li>
+                        <li>
+                            <a href="">Piani e Prezzi</a>
+                            <div class="sotto-menu">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eum nemo cumque nobis, veritatis, quibusdam repudiandae pariatur fugit unde autem repellen</div>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /Link Header -->
@@ -39,10 +48,20 @@
                 <!-- Link Header -->
                 <nav class="header-link">
                     <ul>
-                        <li><a href="">Supporto</a></li>
-                        <li><a href="">Contatta l'ufficio vendite</a></li>
-                        <li><a href="">Accedi</a></li>
-                        <li><a class="btn blue" href="">Invia</a></li>
+                        <li>
+                            <a href="">Supporto</a>
+                            <div class="sotto-menu">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eum nemo cumque nobis, veritatis, quibusdam repudiandae pariatur fugit unde autem repellen</div>
+                        </li>
+                        <li>
+                            <a href="">Contatta l'ufficio vendite</a>
+                            <div class="sotto-menu">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eum nemo cumque nobis, veritatis, quibusdam repudiandae pariatur fugit unde autem repellen</div>
+                        </li>
+                        <li>
+                            <a href="">Accedi</a>
+                        </li>
+                        <li>
+                            <a class="btn blue" href="">Invia</a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /Link Header -->
